--- a/test2.html
+++ b/test2.html
@@ -4,11 +4,13 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Wedding Decor Planner</title>
+    <title>Wedding Decor Gallery</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Awesome Icons -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+    <!-- Lightbox CSS -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css" rel="stylesheet">
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Raleway:wght@400&display=swap" rel="stylesheet">
     <!-- Custom CSS -->
@@ -16,8 +18,17 @@
         body {
             font-family: 'Raleway', sans-serif;
             background-color: #f8f9fa;
+            scroll-behavior: smooth;
         }
 
+        /* Sticky Navbar */
+        .navbar {
+            position: sticky;
+            top: 0;
+            z-index: 1000;
+        }
+
+        /* Hero Section with Parallax Effect */
         .hero-section {
             position: relative;
             height: 80vh;
@@ -27,6 +38,10 @@
             color: white;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
             overflow: hidden;
+            background-attachment: fixed;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
         }
 
         .hero-section video {
@@ -43,6 +58,7 @@
             font-size: 3rem;
             font-weight: bold;
             text-transform: uppercase;
+            animation: fadeIn 2s ease-in-out;
         }
 
         .btn-light {
@@ -51,16 +67,27 @@
             color: #000;
             padding: 10px 20px;
             font-size: 18px;
+            transition: all 0.3s ease;
         }
 
         .btn-light:hover {
             background-color: #ffad33;
             color: white;
+            transform: scale(1.1);
         }
 
+        /* Animated Cards */
         .decor-card {
             transition: transform 0.3s ease, box-shadow 0.3s ease;
             border-radius: 10px;
+            opacity: 0;
+            transform: translateY(50px);
+            transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+        }
+
+        .decor-card.visible {
+            opacity: 1;
+            transform: translateY(0);
         }
 
         .decor-card:hover {
@@ -70,8 +97,14 @@
 
         .card-img-top {
             border-radius: 10px 10px 0 0;
+            transition: transform 0.3s ease;
         }
 
+        .card-img-top:hover {
+            transform: scale(1.05);
+        }
+
+        /* Footer */
         .footer {
             background-color: #343a40;
             color: white;
@@ -81,33 +114,21 @@
             font-size: 1.5rem;
             margin: 0 15px;
             color: #fff;
+            transition: color 0.3s ease;
         }
 
         .footer .social-icons i:hover {
             color: #ffad33;
         }
 
-        .navbar-brand {
-            font-family: 'Playfair Display', serif;
-            font-size: 2rem;
-            letter-spacing: 2px;
-        }
-
-        .navbar-dark .navbar-nav .nav-link {
-            color: rgba(255, 255, 255, 0.8);
-        }
-
-        .navbar-dark .navbar-nav .nav-link:hover {
-            color: #ffad33;
-        }
-
-        .card-body ul {
-            list-style-type: none;
-            padding-left: 0;
-        }
-
-        .card-body ul li {
-            margin-bottom: 10px;
+        /* Animations */
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+            }
+            to {
+                opacity: 1;
+            }
         }
 
         @media (max-width: 767px) {
@@ -115,23 +136,22 @@
                 font-size: 2rem;
             }
         }
-
     </style>
 </head>
 
 <body>
 
-    <!-- Navbar -->
+    <!-- Sticky Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Wedding Decor Planner</a>
+            <a class="navbar-brand" href="#">Wedding Decor Gallery</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#decor-themes">Decor Themes</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#decor-themes">Gallery</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Services</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
                 </ul>
@@ -139,7 +159,7 @@
         </div>
     </nav>
 
-    <!-- Hero Section with Video Background -->
+    <!-- Hero Section with Parallax Effect -->
     <section class="hero-section">
         <video autoplay muted loop>
             <source src="/frontend/allpack/venues/venuesdata/Ugandan Wedding Decor Of H V.mp4" type="video/mp4">
@@ -152,73 +172,101 @@
         </div>
     </section>
 
-    <!-- Decor Themes Section -->
-    <section id="decor-themes" class="container my-5">
-        <h2 class="text-center mb-4">Our Decor Themes</h2>
+    <!-- Card Section -->
+    <div class="container my-5" id="decor-themes">
+        <h2 class="text-center mb-5">Our Decor Themes</h2>
         <div class="row row-cols-1 row-cols-md-3 g-4">
-            <!-- Decor Theme Card 1 -->
+            <!-- Card 1 -->
             <div class="col">
-                <div class="card h-100 decor-card">
-                    <img src="https://via.placeholder.com/400x300" class="card-img-top" alt="Decor Theme 1">
+                <div class="card decor-card">
+                    <a href="/frontend/allpack/iriza/irizadata/iriza0.jpg" data-lightbox="decor-gallery" data-title="Dedicated Waitstaff">
+                        <img src="/frontend/allpack/iriza/irizadata/iriza0.jpg" class="card-img-top" alt="Dedicated Waitstaff">
+                    </a>
                     <div class="card-body">
-                        <h5 class="card-title">Romantic Garden</h5>
-                        <p class="card-text">A lush garden theme with floral arches and fairy lights.</p>
-                        <ul>
-                            <li><i class="fas fa-palette"></i> Colors: Pastel shades</li>
-                            <li><i class="fas fa-map-marker-alt"></i> Best for: Outdoor weddings</li>
-                        </ul>
-                        <a href="#" class="btn btn-primary">Learn More</a>
+                        <h5 class="card-title">Dedicated Waitstaff</h5>
+                        <p class="card-text">Our team provides attentive, professional waitstaff that ensure your event runs smoothly and your guests are always taken care of.</p>
                     </div>
                 </div>
             </div>
-            <!-- Decor Theme Card 2 -->
+            <!-- Repeat for other cards -->
+            <!-- Card 2 -->
             <div class="col">
-                <div class="card h-100 decor-card">
-                    <img src="https://via.placeholder.com/400x300" alt="Decor Theme 2" class="card-img-top">
+                <div class="card decor-card">
+                    <a href="/frontend/allpack/iriza/irizadata/iriza10.jpg" data-lightbox="decor-gallery" data-title="Elegance in Every Detail">
+                        <img src="/frontend/allpack/iriza/irizadata/iriza10.jpg" class="card-img-top" alt="Elegance in Every Detail">
+                    </a>
                     <div class="card-body">
-                        <h5 class="card-title">Elegant Ballroom</h5>
-                        <p class="card-text">A sophisticated theme with crystal chandeliers and silk drapes.</p>
-                        <ul>
-                            <li><i class="fas fa-palette"></i> Colors: Gold and ivory</li>
-                            <li><i class="fas fa-map-marker-alt"></i> Best for: Indoor weddings</li>
-                        </ul>
-                        <a href="#" class="btn btn-primary">Learn More</a>
+                        <h5 class="card-title">Elegance in Every Detail</h5>
+                        <p class="card-text">Our skilled staff delivers impeccable service with an emphasis on elegance, ensuring that your event leaves a lasting impression.</p>
                     </div>
                 </div>
             </div>
-            <!-- Decor Theme Card 3 -->
+            <!-- Card 3 -->
             <div class="col">
-                <div class="card h-100 decor-card">
-                    <img src="/assethome/1.jpg" alt="Decor Theme 3" class="card-img-top">
+                <div class="card decor-card">
+                    <a href="/frontend/allpack/iriza/irizadata/iriza11.jpg" data-lightbox="decor-gallery" data-title="Unforgettable Event Service">
+                        <img src="/frontend/allpack/iriza/irizadata/iriza11.jpg" class="card-img-top" alt="Unforgettable Event Service">
+                    </a>
                     <div class="card-body">
-                        <h5 class="card-title">Beach Bliss</h5>
-                        <p class="card-text">A tropical theme with seashells, lanterns, and ocean hues.</p>
-                        <ul>
-                            <li><i class="fas fa-palette"></i> Colors: Blue and white</li>
-                            <li><i class="fas fa-map-marker-alt"></i> Best for: Beach weddings</li>
-                        </ul>
-                        <a href="#" class="btn btn-primary">Learn More</a>
+                        <h5 class="card-title">Unforgettable Event Service</h5>
+                        <p class="card-text">We provide seamless service, ensuring every detail is meticulously planned to create an unforgettable experience for you and your guests.</p>
                     </div>
                 </div>
             </div>
+            <!-- Repeat for other cards -->
         </div>
-    </section>
+    </div>
 
     <!-- Footer -->
-    <footer class="footer py-4">
-        <div class="container text-center">
-            <p class="mb-0">&copy; 2025 Wedding Decor Planner. All Rights Reserved.</p>
-            <div class="social-icons mt-2">
-                <a href="#" class="text-light me-3"><i class="fab fa-facebook-f"></i></a>
-                <a href="#" class="text-light me-3"><i class="fab fa-twitter"></i></a>
-                <a href="#" class="text-light me-3"><i class="fab fa-instagram"></i></a>
-                <a href="#" class="text-light"><i class="fab fa-linkedin"></i></a>
+    <footer class="bg-dark text-light py-4 footer-animated">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <h5>About Us</h5>
+                    <p class="footer-content">We are a dedicated team of event planners, committed to creating unforgettable experiences. From weddings to corporate events, we handle every detail with care and expertise.</p>
+                </div>
+                <div class="col-md-4">
+                    <h5>Quick Links</h5>
+                    <ul class="list-unstyled footer-content">
+                        <li><a href="home.htm" class="text-light">Home</a></li>
+                        <li><a href="#" class="text-light">About</a></li>
+                        <li><a href="#" class="text-light">Services</a></li>
+                        <li><a href="index.html" class="text-light">Packages</a></li>
+                        <li><a href="#" class="text-light">Contact</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-4">
+                    <h5>Connect With Us</h5>
+                    <ul class="list-unstyled footer-content">
+                        <li><a href="#" class="text-light"><i class="fab fa-facebook-f"></i> Facebook</a></li>
+                        <li><a href="#" class="text-light"><i class="fab fa-twitter"></i> Twitter</a></li>
+                        <li><a href="#" class="text-light"><i class="fab fa-instagram"></i> Instagram</a></li>
+                        <li><a href="#" class="text-light"><i class="fab fa-linkedin"></i> LinkedIn</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="text-center mt-4">
+                <p class="footer-content">&copy; 2025 Event Planner. All Rights Reserved.</p>
             </div>
         </div>
     </footer>
 
-    <!-- Bootstrap JS Bundle -->
+    <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
+    <script>
+        // Add animation to cards when they come into view
+        const cards = document.querySelectorAll('.decor-card');
+        const observer = new IntersectionObserver((entries) => {
+            entries.forEach(entry => {
+                if (entry.isIntersecting) {
+                    entry.target.classList.add('visible');
+                }
+            });
+        }, { threshold: 0.1 });
+
+        cards.forEach(card => observer.observe(card));
+    </script>
 </body>
 
 </html>
