--- a/test2.html
+++ b/test2.html
@@ -2,33 +2,17 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wedding Decor Gallery</title>
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Font Awesome Icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-    <!-- Lightbox CSS -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css" rel="stylesheet">
-    <!-- Google Font -->
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Raleway:wght@400&display=swap" rel="stylesheet">
-    <!-- Custom CSS -->
     <style>
         body {
             font-family: 'Raleway', sans-serif;
             background-color: #f8f9fa;
-            scroll-behavior: smooth;
         }
 
-        /* Sticky Navbar */
-        .navbar {
-            position: sticky;
-            top: 0;
-            z-index: 1000;
-        }
-
-        /* Hero Section with Parallax Effect */
         .hero-section {
             position: relative;
             height: 80vh;
@@ -38,10 +22,6 @@
             color: white;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
             overflow: hidden;
-            background-attachment: fixed;
-            background-position: center;
-            background-repeat: no-repeat;
-            background-size: cover;
         }
 
         .hero-section video {
@@ -58,7 +38,6 @@
             font-size: 3rem;
             font-weight: bold;
             text-transform: uppercase;
-            animation: fadeIn 2s ease-in-out;
         }
 
         .btn-light {
@@ -67,44 +46,33 @@
             color: #000;
             padding: 10px 20px;
             font-size: 18px;
-            transition: all 0.3s ease;
         }
 
         .btn-light:hover {
             background-color: #ffad33;
             color: white;
-            transform: scale(1.1);
         }
 
-        /* Animated Cards */
         .decor-card {
             transition: transform 0.3s ease, box-shadow 0.3s ease;
             border-radius: 10px;
-            opacity: 0;
-            transform: translateY(50px);
-            transition: opacity 0.6s ease-out, transform 0.6s ease-out;
-        }
-
-        .decor-card.visible {
-            opacity: 1;
-            transform: translateY(0);
+            overflow: hidden;
+            background: linear-gradient(135deg, #ffffff, #f8f9fa);
+            border: none;
         }
 
         .decor-card:hover {
-            transform: translateY(-10px);
-            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15);
+            transform: scale(1.05);
+            box-shadow: 0 15px 30px rgba(0, 0, 0, 0.2);
         }
 
         .card-img-top {
             border-radius: 10px 10px 0 0;
-            transition: transform 0.3s ease;
+            height: 200px;
+            object-fit: cover;
+            cursor: pointer;
         }
 
-        .card-img-top:hover {
-            transform: scale(1.05);
-        }
-
-        /* Footer */
         .footer {
             background-color: #343a40;
             color: white;
@@ -114,21 +82,10 @@
             font-size: 1.5rem;
             margin: 0 15px;
             color: #fff;
-            transition: color 0.3s ease;
         }
 
         .footer .social-icons i:hover {
             color: #ffad33;
-        }
-
-        /* Animations */
-        @keyframes fadeIn {
-            from {
-                opacity: 0;
-            }
-            to {
-                opacity: 1;
-            }
         }
 
         @media (max-width: 767px) {
@@ -141,25 +98,27 @@
 
 <body>
 
-    <!-- Sticky Navbar -->
+    <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Wedding Decor Gallery</a>
+            <a class="navbar-brand" href="#">Logo</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
+                <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#decor-themes">Gallery</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Services</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Packages</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Suppliers</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Booking</a></li>
                 </ul>
             </div>
         </div>
     </nav>
 
-    <!-- Hero Section with Parallax Effect -->
+    <!-- Hero Section with Video Background -->
     <section class="hero-section">
         <video autoplay muted loop>
             <source src="/frontend/allpack/venues/venuesdata/Ugandan Wedding Decor Of H V.mp4" type="video/mp4">
@@ -179,37 +138,19 @@
             <!-- Card 1 -->
             <div class="col">
                 <div class="card decor-card">
-                    <a href="/frontend/allpack/iriza/irizadata/iriza0.jpg" data-lightbox="decor-gallery" data-title="Dedicated Waitstaff">
-                        <img src="/frontend/allpack/iriza/irizadata/iriza0.jpg" class="card-img-top" alt="Dedicated Waitstaff">
-                    </a>
+                    <img src="/frontend/allpack/venues/venuesdata/decor1.jpeg" class="card-img-top" alt="Professional Waiter Service" onclick="enlargeImage(this)">
                     <div class="card-body">
-                        <h5 class="card-title">Dedicated Waitstaff</h5>
-                        <p class="card-text">Our team provides attentive, professional waitstaff that ensure your event runs smoothly and your guests are always taken care of.</p>
+                        <p class="card-text">Our team provides professional waitstaff to ensure your event runs smoothly.</p>
                     </div>
                 </div>
             </div>
-            <!-- Repeat for other cards -->
-            <!-- Card 2 -->
+      
+            <!-- Card 1 -->
             <div class="col">
                 <div class="card decor-card">
-                    <a href="/frontend/allpack/iriza/irizadata/iriza10.jpg" data-lightbox="decor-gallery" data-title="Elegance in Every Detail">
-                        <img src="/frontend/allpack/iriza/irizadata/iriza10.jpg" class="card-img-top" alt="Elegance in Every Detail">
-                    </a>
+                    <img src="/frontend/allpack/venues/venuesdata/decor2.jpg" class="card-img-top" alt="Professional Waiter Service" onclick="enlargeImage(this)">
                     <div class="card-body">
-                        <h5 class="card-title">Elegance in Every Detail</h5>
-                        <p class="card-text">Our skilled staff delivers impeccable service with an emphasis on elegance, ensuring that your event leaves a lasting impression.</p>
-                    </div>
-                </div>
-            </div>
-            <!-- Card 3 -->
-            <div class="col">
-                <div class="card decor-card">
-                    <a href="/frontend/allpack/iriza/irizadata/iriza11.jpg" data-lightbox="decor-gallery" data-title="Unforgettable Event Service">
-                        <img src="/frontend/allpack/iriza/irizadata/iriza11.jpg" class="card-img-top" alt="Unforgettable Event Service">
-                    </a>
-                    <div class="card-body">
-                        <h5 class="card-title">Unforgettable Event Service</h5>
-                        <p class="card-text">We provide seamless service, ensuring every detail is meticulously planned to create an unforgettable experience for you and your guests.</p>
+                        <p class="card-text">Our team provides professional waitstaff to ensure your event runs smoothly.</p>
                     </div>
                 </div>
             </div>
@@ -217,55 +158,36 @@
         </div>
     </div>
 
+    <!-- Modal -->
+    <div class="modal fade" id="imageModal" tabindex="-1" aria-labelledby="imageModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="imageModalLabel">Enlarged Image</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <img src="" id="modalImage" class="img-fluid">
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- Footer -->
-    <footer class="bg-dark text-light py-4 footer-animated">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4">
-                    <h5>About Us</h5>
-                    <p class="footer-content">We are a dedicated team of event planners, committed to creating unforgettable experiences. From weddings to corporate events, we handle every detail with care and expertise.</p>
-                </div>
-                <div class="col-md-4">
-                    <h5>Quick Links</h5>
-                    <ul class="list-unstyled footer-content">
-                        <li><a href="home.htm" class="text-light">Home</a></li>
-                        <li><a href="#" class="text-light">About</a></li>
-                        <li><a href="#" class="text-light">Services</a></li>
-                        <li><a href="index.html" class="text-light">Packages</a></li>
-                        <li><a href="#" class="text-light">Contact</a></li>
-                    </ul>
-                </div>
-                <div class="col-md-4">
-                    <h5>Connect With Us</h5>
-                    <ul class="list-unstyled footer-content">
-                        <li><a href="#" class="text-light"><i class="fab fa-facebook-f"></i> Facebook</a></li>
-                        <li><a href="#" class="text-light"><i class="fab fa-twitter"></i> Twitter</a></li>
-                        <li><a href="#" class="text-light"><i class="fab fa-instagram"></i> Instagram</a></li>
-                        <li><a href="#" class="text-light"><i class="fab fa-linkedin"></i> LinkedIn</a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="text-center mt-4">
-                <p class="footer-content">&copy; 2025 Event Planner. All Rights Reserved.</p>
-            </div>
+    <footer class="bg-dark text-light py-4">
+        <div class="container text-center">
+            <p>&copy; 2025 Event Planner. All Rights Reserved.</p>
         </div>
     </footer>
 
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
     <script>
-        // Add animation to cards when they come into view
-        const cards = document.querySelectorAll('.decor-card');
-        const observer = new IntersectionObserver((entries) => {
-            entries.forEach(entry => {
-                if (entry.isIntersecting) {
-                    entry.target.classList.add('visible');
-                }
-            });
-        }, { threshold: 0.1 });
-
-        cards.forEach(card => observer.observe(card));
+        function enlargeImage(img) {
+            document.getElementById("modalImage").src = img.src;
+            const modal = new bootstrap.Modal(document.getElementById('imageModal'));
+            modal.show();
+        }
     </script>
 </body>
 
