--- a/frontend/test.html
+++ b/frontend/test.html
@@ -158,7 +158,7 @@
             <!-- Card 1 -->
             <div class="col">
                 <div class="card">
-                    <img src="/frontend/allpack/iriza/irizadata/iriza0.jpg" class="card-img-top" alt="Professional Waiter Service" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/iriza/irizadata/iriza0.jpg')">
+                    <img src="/frontend/allpack/venues/venuesdata/decor1.jpeg" class="card-img-top" alt="Professional Waiter Service" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/venues/venuesdata/decor1.jpeg')">
                     <div class="card-body">
                         <h5 class="card-title">Dedicated Waitstaff</h5>
                         <p class="card-text">Our team provides attentive, professional waitstaff that ensure your event runs smoothly and your guests are always taken care of.</p>
@@ -168,7 +168,7 @@
             <!-- Card 2 -->
             <div class="col">
                 <div class="card">
-                    <img src="/frontend/allpack/iriza/irizadata/iriza10.jpg" class="card-img-top" alt="Serving Guests with Style" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/iriza/irizadata/iriza10.jpg')">
+                    <img src="/frontend/allpack/venues/venuesdata/decor2.jpg" class="card-img-top" alt="Serving Guests with Style" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="openModal('/frontend/allpack/venues/venuesdata/decor2.jpg')">
                     <div class="card-body">
                         <h5 class="card-title">Elegance in Every Detail</h5>
                         <p class="card-text">Our skilled staff delivers impeccable service with an emphasis on elegance, ensuring that your event leaves a lasting impression.</p>
