--- a/test2.html
+++ b/test2.html
@@ -4,93 +4,77 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wedding Decor Gallery</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+    <title>Wedding Venues Gallery</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
+        /* General Page Layout */
         body {
-            font-family: 'Raleway', sans-serif;
-            background-color: #f8f9fa;
+            font-family: 'Arial', sans-serif;
+            background-color: #f4f4f4;
         }
 
-        .hero-section {
+        /* Gallery Styling */
+        .venue-gallery {
+            padding: 60px 0;
+        }
+
+        .venue-card {
             position: relative;
-            height: 80vh;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: white;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
             overflow: hidden;
+            border-radius: 15px;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+            margin-bottom: 30px;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            cursor: pointer;
         }
 
-        .hero-section video {
-            position: absolute;
-            top: 0;
-            left: 0;
+        .venue-card:hover {
+            transform: scale(1.05);
+            box-shadow: 0 10px 40px rgba(0, 0, 0, 0.2);
+        }
+
+        .venue-card img {
             width: 100%;
             height: 100%;
             object-fit: cover;
-            z-index: -1;
         }
 
-        .hero-section h1 {
-            font-size: 3rem;
+        .venue-overlay {
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: rgba(0, 0, 0, 0.5);
+            opacity: 0;
+            transition: opacity 0.3s ease;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .venue-card:hover .venue-overlay {
+            opacity: 1;
+        }
+
+        .venue-info {
+            color: #fff;
+            text-align: center;
+            font-size: 20px;
             font-weight: bold;
             text-transform: uppercase;
         }
 
-        .btn-light {
-            border-radius: 25px;
-            background-color: rgba(255, 255, 255, 0.7);
-            color: #000;
-            padding: 10px 20px;
-            font-size: 18px;
+        /* Responsive Grid */
+        @media (min-width: 1200px) {
+            .venue-card {
+                height: 350px;
+            }
         }
 
-        .btn-light:hover {
-            background-color: #ffad33;
-            color: white;
-        }
-
-        .decor-card {
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-            border-radius: 10px;
-            overflow: hidden;
-            background: linear-gradient(135deg, #ffffff, #f8f9fa);
-            border: none;
-        }
-
-        .decor-card:hover {
-            transform: scale(1.05);
-            box-shadow: 0 15px 30px rgba(0, 0, 0, 0.2);
-        }
-
-        .card-img-top {
-            border-radius: 10px 10px 0 0;
-            height: 200px;
-            object-fit: cover;
-            cursor: pointer;
-        }
-
-        .footer {
-            background-color: #343a40;
-            color: white;
-        }
-
-        .footer .social-icons i {
-            font-size: 1.5rem;
-            margin: 0 15px;
-            color: #fff;
-        }
-
-        .footer .social-icons i:hover {
-            color: #ffad33;
-        }
-
-        @media (max-width: 767px) {
-            .hero-section h1 {
-                font-size: 2rem;
+        @media (max-width: 768px) {
+            .venue-card {
+                height: 250px;
             }
         }
     </style>
@@ -98,96 +82,99 @@
 
 <body>
 
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Logo</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Services</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Packages</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Suppliers</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Booking</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-
-    <!-- Hero Section with Video Background -->
-    <section class="hero-section">
-        <video autoplay muted loop>
-            <source src="/frontend/allpack/venues/venuesdata/Ugandan Wedding Decor Of H V.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
-        <div class="text-center">
-            <h1>Design Your Dream Wedding Decor</h1>
-            <p class="lead">Explore our stunning decor themes to make your special day unforgettable.</p>
-            <a href="#decor-themes" class="btn btn-light btn-lg">View Themes</a>
-        </div>
-    </section>
-
-    <!-- Card Section -->
-    <div class="container my-5" id="decor-themes">
-        <h2 class="text-center mb-5">Our Decor Themes</h2>
-        <div class="row row-cols-1 row-cols-md-3 g-4">
-            <!-- Card 1 -->
+    <div class="container-fluid venue-gallery">
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+            <!-- Venue 1 -->
             <div class="col">
-                <div class="card decor-card">
-                    <img src="/frontend/allpack/venues/venuesdata/decor1.jpeg" class="card-img-top" alt="Professional Waiter Service" onclick="enlargeImage(this)">
-                    <div class="card-body">
-                        <p class="card-text">Our team provides professional waitstaff to ensure your event runs smoothly.</p>
+                <div class="venue-card" data-bs-toggle="modal" data-bs-target="#venueModal" data-bs-image="/frontend/allpack/venues/venuesdata/decor1.jpeg" data-bs-title="Elegant Ballroom">
+                    <img src="/frontend/allpack/venues/venuesdata/decor1.jpeg" alt="Venue 1">
+                    <div class="venue-overlay">
+                        <div class="venue-info">Elegant Ballroom</div>
                     </div>
                 </div>
             </div>
-      
-            <!-- Card 1 -->
+
+            <!-- Venue 2 -->
             <div class="col">
-                <div class="card decor-card">
-                    <img src="/frontend/allpack/venues/venuesdata/decor2.jpg" class="card-img-top" alt="Professional Waiter Service" onclick="enlargeImage(this)">
-                    <div class="card-body">
-                        <p class="card-text">Our team provides professional waitstaff to ensure your event runs smoothly.</p>
+                <div class="venue-card" data-bs-toggle="modal" data-bs-target="#venueModal" data-bs-image="https://via.placeholder.com/600x400" data-bs-title="Garden Paradise">
+                    <img src="https://via.placeholder.com/600x400" alt="Venue 2">
+                    <div class="venue-overlay">
+                        <div class="venue-info">Garden Paradise</div>
                     </div>
                 </div>
             </div>
-            <!-- Repeat for other cards -->
+
+            <!-- Venue 3 -->
+            <div class="col">
+                <div class="venue-card" data-bs-toggle="modal" data-bs-target="#venueModal" data-bs-image="/frontend/allpack/venues/venuesdata/decor2.jpg" data-bs-title="Riverside Retreat">
+                    <img src="/frontend/allpack/venues/venuesdata/decor2.jpg" alt="Venue 3">
+                    <div class="venue-overlay">
+                        <div class="venue-info">Riverside Retreat</div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Venue 4 -->
+            <div class="col">
+                <div class="venue-card" data-bs-toggle="modal" data-bs-target="#venueModal" data-bs-image="https://via.placeholder.com/600x400" data-bs-title="Charming Chateau">
+                    <img src="https://via.placeholder.com/600x400" alt="Venue 4">
+                    <div class="venue-overlay">
+                        <div class="venue-info">Charming Chateau</div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Venue 5 -->
+            <div class="col">
+                <div class="venue-card" data-bs-toggle="modal" data-bs-target="#venueModal" data-bs-image="https://via.placeholder.com/600x400" data-bs-title="Modern Loft">
+                    <img src="https://via.placeholder.com/600x400" alt="Venue 5">
+                    <div class="venue-overlay">
+                        <div class="venue-info">Modern Loft</div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Venue 6 -->
+            <div class="col">
+                <div class="venue-card" data-bs-toggle="modal" data-bs-target="#venueModal" data-bs-image="https://via.placeholder.com/600x400" data-bs-title="Rustic Barn">
+                    <img src="https://via.placeholder.com/600x400" alt="Venue 6">
+                    <div class="venue-overlay">
+                        <div class="venue-info">Rustic Barn</div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
-    <!-- Modal -->
-    <div class="modal fade" id="imageModal" tabindex="-1" aria-labelledby="imageModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-lg">
+    <!-- Modal for displaying larger image -->
+    <div class="modal fade" id="venueModal" tabindex="-1" aria-labelledby="venueModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="imageModalLabel">Enlarged Image</h5>
+                    <h5 class="modal-title" id="venueModalLabel">Venue Title</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <img src="" id="modalImage" class="img-fluid">
+                    <img src="" alt="Venue" class="img-fluid" id="modalImage">
                 </div>
             </div>
         </div>
     </div>
 
-    <!-- Footer -->
-    <footer class="bg-dark text-light py-4">
-        <div class="container text-center">
-            <p>&copy; 2025 Event Planner. All Rights Reserved.</p>
-        </div>
-    </footer>
-
-    <!-- Scripts -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script>
-        function enlargeImage(img) {
-            document.getElementById("modalImage").src = img.src;
-            const modal = new bootstrap.Modal(document.getElementById('imageModal'));
-            modal.show();
-        }
+        // Script to update modal with image and title
+        const venueCards = document.querySelectorAll('.venue-card');
+        venueCards.forEach(card => {
+            card.addEventListener('click', () => {
+                const imageUrl = card.getAttribute('data-bs-image');
+                const title = card.getAttribute('data-bs-title');
+                const modalImage = document.getElementById('modalImage');
+                const modalTitle = document.getElementById('venueModalLabel');
+                modalImage.src = imageUrl;
+                modalTitle.textContent = title;
+            });
+        });
     </script>
 </body>
 
