--- a/frontend/allpack/venues/venues.html
+++ b/frontend/allpack/venues/venues.html
@@ -1,16 +1,151 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Event Gallery</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Wedding Decor</title>
+    <!-- Bootstrap 5 CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/frontend/css/footer.css">
     <link rel="stylesheet" href="/frontend/css/navbar.css">
-</head>
-<body>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+   <link rel="stylesheet" href="/frontend/allpack/css/decor.css">
+    <!-- Swiper.js CSS -->
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
+    <!-- Custom CSS -->
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            background-color: #f4f4f4;
+        }
 
+        .swiper {
+            width: 100%;
+            height: 100%;
+        }
+
+        .swiper-slide {
+            text-align: center;
+            background: #fff;
+            border-radius: 10px;
+            overflow: hidden;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s ease;
+        }
+
+        .swiper-slide:hover {
+            transform: scale(1.05);
+        }
+
+        .swiper-slide img {
+            width: 100%;
+            height: 200px;
+            object-fit: cover;
+            cursor: pointer;
+        }
+
+        .card-body {
+            padding: 15px;
+        }
+
+        .card-title {
+            font-size: 1.2rem;
+            font-weight: bold;
+            margin-bottom: 10px;
+        }
+
+        .card-text {
+            font-size: 0.9rem;
+            color: #666;
+        }
+
+        .modal-content {
+            background-color: #fff;
+            border-radius: 10px;
+        }
+
+        .modal-body img {
+            width: 100%;
+            border-radius: 10px;
+        }
+
+        .venue-gallery {
+            padding: 60px 0;
+        }
+
+        .venue-card {
+            position: relative;
+            overflow: hidden;
+            border-radius: 15px;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+            margin-bottom: 30px;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            cursor: pointer;
+        }
+
+        .venue-card:hover {
+            transform: scale(1.05);
+            box-shadow: 0 10px 40px rgba(0, 0, 0, 0.2);
+        }
+
+        .venue-card img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+
+        .venue-overlay {
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: rgba(0, 0, 0, 0.5);
+            opacity: 0;
+            transition: opacity 0.3s ease;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .venue-card:hover .venue-overlay {
+            opacity: 1;
+        }
+
+        .venue-info {
+            color: #fff;
+            text-align: center;
+            font-size: 20px;
+            font-weight: bold;
+            text-transform: uppercase;
+        }
+
+        @media (min-width: 1200px) {
+            .venue-card {
+                height: 350px;
+            }
+        }
+
+        @media (max-width: 768px) {
+            .venue-card {
+                height: 250px;
+            }
+        }
+
+        .modal-dialog {
+            max-width: 90%;
+        }
+
+        .modal-body img {
+            max-height: 80vh;
+            object-fit: contain;
+        }
+    </style>
+</head>
+
+<body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
@@ -30,12 +165,205 @@
             </div>
         </div>
     </nav>
+    <section class="hero-section">
+        <!-- Video Background -->
+        <video autoplay muted loop>
+            <source src="/frontend/allpack/venues/venuesdata/Reception Decor Tanzania Wedding Decor Stage Decor Lovely Wedding.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+        <!-- Hero Content -->
+        <div class="text-center">
+            <h1>Transform Your Wedding with Stunning Decor</h1>
+            <p class="lead">Discover breathtaking decor themes and services for your special day.</p>
+            <a href="#decor-themes" class="btn btn-light btn-lg">Explore Themes</a>
+        </div>
+    </section>  
+  <!-- Wedding Decor Gallery Section -->
+<div class="container-fluid venue-gallery" id="decor-themes">
+    <h1 class="text-center mb-4">Wedding Decor Gallery</h1>
+    <p class="text-center">Enchanting Wedding Decor – Crafting Dreamy Moments with Elegant Details!</p>
+    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+        <!-- Decor 1 -->
+        <div class="col">
+            <div class="venue-card" data-bs-toggle="modal" data-bs-target="#venueModal" data-bs-image="/frontend/allpack/venues/venuesdata/decor1.jpeg" data-bs-title="Elegant Ballroom">
+                <img src="/frontend/allpack/venues/venuesdata/decor1.jpeg" alt="Decor 1">
+                <div class="venue-overlay">
+                    <div class="venue-info">Elegant Ballroom</div>
+                </div>
+            </div>
+        </div>
 
-    <!-- Video with rotation -->
-    <video src="/frontend/allpack/venues/venuesdata/gogo.mp4" autoplay muted class="rotated-video"></video>
+        <!-- Decor 2 -->
+        <div class="col">
+            <div class="venue-card" data-bs-toggle="modal" data-bs-target="#venueModal" data-bs-image="/frontend/allpack/venues/venuesdata/decor3.jpg" data-bs-title="Garden Paradise">
+                <img src="/frontend/allpack/venues/venuesdata/decor3.jpg" alt="Decor 2">
+                <div class="venue-overlay">
+                    <div class="venue-info">Garden Paradise</div>
+                </div>
+            </div>
+        </div>
 
-    <!-- Footer -->
-    <footer class="bg-dark text-light py-4 footer-animated">
+        <!-- Decor 3 -->
+        <div class="col">
+            <div class="venue-card" data-bs-toggle="modal" data-bs-target="#venueModal" data-bs-image="/frontend/allpack/venues/venuesdata/decor2.jpg" data-bs-title="Riverside Retreat">
+                <img src="/frontend/allpack/venues/venuesdata/decor2.jpg" alt="Decor 3">
+                <div class="venue-overlay">
+                    <div class="venue-info">Riverside Retreat</div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Decor 4 -->
+        <div class="col">
+            <div class="venue-card" data-bs-toggle="modal" data-bs-target="#venueModal" data-bs-image="/frontend/allpack/venues/venuesdata/decor5.jpg" data-bs-title="Charming Chateau">
+                <img src="/frontend/allpack/venues/venuesdata/decor5.jpg" alt="Decor 4">
+                <div class="venue-overlay">
+                    <div class="venue-info">Charming Chateau</div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Decor 5 -->
+        <div class="col">
+            <div class="venue-card" data-bs-toggle="modal" data-bs-target="#venueModal" data-bs-image="/frontend/allpack/venues/venuesdata/6.jpg" data-bs-title="Modern Loft">
+                <img src="/frontend/allpack/venues/venuesdata/6.jpg" alt="Decor 5">
+                <div class="venue-overlay">
+                    <div class="venue-info">Modern Loft</div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Decor 6 -->
+        <div class="col">
+            <div class="venue-card" data-bs-toggle="modal" data-bs-target="#venueModal" data-bs-image="/frontend/allpack/venues/venuesdata/decor3.jpg" data-bs-title="Rustic Barn">
+                <img src="/frontend/allpack/venues/venuesdata/decor3.jpg" alt="Decor 6">
+                <div class="venue-overlay">
+                    <div class="venue-info">Rustic Barn</div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+    <!-- Modal for Enlarged Image -->
+    <div class="modal fade" id="imageModal" tabindex="-1" aria-labelledby="imageModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="imageModalLabel">Enlarged Image</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body text-center">
+                    <img id="enlargedImg" src="" class="img-fluid" alt="Enlarged Image">
+                </div>
+            </div>
+        </div>
+    </div>
+
+       <!-- Slider Section -->
+       <div class="container my-5">
+        <h1 class="text-center mb-4">Wedding Decor Inspiration</h1>
+        <div class="swiper mySwiper">
+            <div class="swiper-wrapper">
+                <!-- Slide 1 -->
+                <div class="swiper-slide">
+                    <div class="card">
+                        <a href="/frontend/allpack/venues/venuesdata/c1.jpg">
+                            <img src="/frontend/allpack/venues/venuesdata/c1.jpg" alt="Wedding Decor 1" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="enlargeImage(this)">
+                        </a>
+                        <div class="card-body">
+                            <h5 class="card-title">Elegant Floral Arrangements</h5>
+                            <p class="card-text">Beautiful floral designs for your special day.</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Slide 2 -->
+                <div class="swiper-slide">
+                    <div class="card">
+                        <a href="/frontend/allpack/venues/venuesdata/c2.jpg">
+                            <img src="/frontend/allpack/venues/venuesdata/c2.jpg" alt="Wedding Decor 2" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="enlargeImage(this)">
+                        </a>
+                        <div class="card-body">
+                            <h5 class="card-title">Romantic Candlelight Setup</h5>
+                            <p class="card-text">Create a romantic ambiance with candles.</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Slide 3 -->
+                <div class="swiper-slide">
+                    <div class="card">
+                        <a href="/frontend/allpack/venues/venuesdata/c3.jpg">
+                            <img src="/frontend/allpack/venues/venuesdata/c3.jpg" alt="Wedding Decor 3" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="enlargeImage(this)">
+                        </a>
+                        <div class="card-body">
+                            <h5 class="card-title">Luxurious Table Settings</h5>
+                            <p class="card-text">Exquisite table setups for a grand celebration.</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Slide 4 -->
+                <div class="swiper-slide">
+                    <div class="card">
+                        <a href="/frontend/allpack/venues/venuesdata/c4.jpg">
+                            <img src="/frontend/allpack/venues/venuesdata/c4.jpg" alt="Wedding Decor 4" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="enlargeImage(this)">
+                        </a>
+                        <div class="card-body">
+                            <h5 class="card-title">Outdoor Garden Decor</h5>
+                            <p class="card-text">Transform your garden into a wedding paradise.</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Slide 5 -->
+                <div class="swiper-slide">
+                    <div class="card">
+                        <a href="/frontend/allpack/venues/venuesdata/c5.jpg">
+                            <img src="/frontend/allpack/venues/venuesdata/c5.jpg" alt="Wedding Decor 5" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="enlargeImage(this)">
+                        </a>
+                        <div class="card-body">
+                            <h5 class="card-title">Elegant Floral Arrangements</h5>
+                            <p class="card-text">Beautiful floral designs for your special day.</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Slide 6 -->
+                <div class="swiper-slide">
+                    <div class="card">
+                        <a href="/frontend/allpack/venues/venuesdata/c6.jpg">
+                            <img src="/frontend/allpack/venues/venuesdata/c6.jpg" alt="Wedding Decor 6" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="enlargeImage(this)">
+                        </a>
+                        <div class="card-body">
+                            <h5 class="card-title">Elegant Floral Arrangements</h5>
+                            <p class="card-text">Beautiful floral designs for your special day.</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Add more slides as needed -->
+            </div>
+            <!-- Swiper Pagination -->
+            <div class="swiper-pagination"></div>
+            <!-- Swiper Navigation -->
+            <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev"></div>
+        </div>
+    </div>
+
+    <!-- Modal for Venues Gallery -->
+    <div class="modal fade" id="venueModal" tabindex="-1" aria-labelledby="venueModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="venueModalLabel">Venue Title</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <img src="" alt="Venue" id="modalImage" class="img-fluid">
+                </div>
+            </div>
+        </div>
+    </div>
+       <!-- Footer -->
+       <footer class="bg-dark text-light py-4 footer-animated">
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
@@ -68,7 +396,57 @@
         </div>
     </footer>
 
-    <!-- Scripts -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Swiper.js JS -->
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <!-- Bootstrap 5 JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Custom JS -->
+    <script>
+        // Initialize Swiper with Autoplay
+        var swiper = new Swiper(".mySwiper", {
+            slidesPerView: 1,
+            spaceBetween: 20,
+            pagination: {
+                el: ".swiper-pagination",
+                clickable: true,
+            },
+            navigation: {
+                nextEl: ".swiper-button-next",
+                prevEl: ".swiper-button-prev",
+            },
+            autoplay: {
+                delay: 3000, // Autoplay delay in milliseconds (3 seconds)
+                disableOnInteraction: false, // Continue autoplay even when user interacts with the slider
+            },
+            breakpoints: {
+                640: {
+                    slidesPerView: 2,
+                },
+                1024: {
+                    slidesPerView: 3,
+                },
+            },
+        });
+
+        // Function to enlarge image
+        function enlargeImage(img) {
+            var enlargedImg = document.getElementById("enlargedImg");
+            enlargedImg.src = img.src; // Set the src of the modal image to the clicked image
+        }
+
+        // Script to update modal with image and title for venues gallery
+        const venueCards = document.querySelectorAll('.venue-card');
+        venueCards.forEach(card => {
+            card.addEventListener('click', () => {
+                const imageUrl = card.getAttribute('data-bs-image');
+                const title = card.getAttribute('data-bs-title');
+                const modalImage = document.getElementById('modalImage');
+                const modalTitle = document.getElementById('venueModalLabel');
+                modalImage.src = imageUrl;
+                modalTitle.textContent = title;
+            });
+        });
+    </script>
 </body>
+
 </html>
