--- a/frontend/home_packages/index.html
+++ b/frontend/home_packages/index.html
@@ -73,10 +73,12 @@
   <div class="row">
     <div class="col-md-4">
       <div class="card">
+        <a href="/frontend/allpack/venues/venues.html">
         <img src="/assethome/venu3.jpg" class="card-img-top" alt="...">
+        </a>
         <div class="card-body d-flex flex-column">
           <h5 class="card-title mb-2">Venue & Decor</h5>
-          <a href="#" class="btn btn-primary">Read More</a>
+          <a href="/frontend/allpack/venues/venues.html" class="btn btn-primary">Read More</a>
         </div>
       </div>
     </div>
