--- a/frontend/allpack/venues/venues.html
+++ b/frontend/allpack/venues/venues.html
@@ -333,8 +333,8 @@
                             <img src="/frontend/allpack/venues/venuesdata/c6.jpg" alt="Wedding Decor 6" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="enlargeImage(this)">
                         </a>
                         <div class="card-body">
-                            <h5 class="card-title">Elegant Floral Arrangements</h5>
-                            <p class="card-text">Beautiful floral designs for your special day.</p>
+                            <h5 class="card-title">Boho Vibes, Endless Inspiration</h5>
+                            <p class="card-text">Express your creativity with vibrant, eclectic, and free-spirited home décor.</p>
                         </div>
                     </div>
                 </div>
@@ -345,8 +345,8 @@
                             <img src="/frontend/allpack/venues/venuesdata/c7.jpg" alt="Wedding Decor 6" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="enlargeImage(this)">
                         </a>
                         <div class="card-body">
-                            <h5 class="card-title">Elegant Floral Arrangements</h5>
-                            <p class="card-text">Beautiful floral designs for your special day.</p>
+                            <h5 class="card-title">Transform Your Space with Style</h5>
+                            <p class="card-text">Discover timeless designs and unique décor pieces that elevate your home or office.</p>
                         </div>
                     </div>
                 </div>
@@ -357,8 +357,8 @@
                             <img src="/frontend/allpack/venues/venuesdata/c8.jpg" alt="Wedding Decor 6" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="enlargeImage(this)">
                         </a>
                         <div class="card-body">
-                            <h5 class="card-title">Elegant Floral Arrangements</h5>
-                            <p class="card-text">Beautiful floral designs for your special day.</p>
+                            <h5 class="card-title">Luxury Décor, Crafted for You</h5>
+                            <p class="card-text">Handpicked collections that bring elegance, charm, and personality to every corner.</p>
                         </div>
                     </div>
                 </div>
@@ -369,8 +369,8 @@
                             <img src="/frontend/allpack/venues/venuesdata/c9.jpg" alt="Wedding Decor 6" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="enlargeImage(this)">
                         </a>
                         <div class="card-body">
-                            <h5 class="card-title">Elegant Floral Arrangements</h5>
-                            <p class="card-text">Beautiful floral designs for your special day.</p>
+                            <h5 class="card-title">Simple Touch, Stunning Spaces</h5>
+                            <p class="card-text">Minimalist and contemporary décor to make your interiors effortlessly beautiful.</p>
                         </div>
                     </div>
                 </div>
